# demo_game

./: .gitignore  App.cpp  App.h  CMakeLists.txt  CMakePresets.json  main.cpp
Engine/: CMakeLists.txt  Cons.h  Timer.cpp  Timer.h
Engine/include/: Game.h  console.h
Engine/include/ECS/: ComponentManager.h  ECS.h  EntityManager.h  System.h  SystemManager.h  Types.h
Engine/include/Math/: Math.h
Engine/include/StateManager/: State.h  StateManager.h
Engine/src/: Game.cpp  console.cpp
Engine/src/ECS/: ECS.cpp
Engine/src/StateManager/: State.cpp
demo_game/: CMakeLists.txt  CMakeSettings.json
demo_game/src/: App.h  Button.cpp  Button.h  ComponentManager.h  Components.h  ECS.cpp  ECS.h  EntityManager.h  Fruit.h  Game.cpp  Game.h  Grid.h  Main.cpp  SystemManager.h
demo_game/src/ECS/: ComponentManager.h  Components.h  ECS.cpp  ECS.h  EntityManager.h
demo_game/src/StateManager/: GameState.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  StateManager.cpp  StateManager.h
